# pyPhoTimeline

./: .env  .gitignore  README.md  live_lsl_timeline.py  main.py  main_offline_timeline.py  pyphotimeline.code-workspace  pyproject.toml  sgconfig.yml  testing_PhoLogToLabStreamingLayer_xdfOpening_notebook.ipynb  testing_debuggingMultiXDFLogFileTimings_notebook.ipynb  testing_notebook.ipynb  testing_notebook_xdf_file_discovery.ipynb
.cursor/plans/: add-normalization-mixin-to-dataframe-renderer_94b8acad.plan.md  add_debug_logging_to_trackrenderer_1f02fa33.plan.md  add_filename_labels_to_video_track_intervals_c73c6729.plan.md  add_logging_to_asyncdetailfetcher_and_factor_out_shared_logging_utilities_8b2d30f8.plan.md  add_track_menu_e54d4644.plan.md  add_vertical_lines_to_log_text_renderer_ac9f33d8.plan.md  adhd_computation_base_class_9202276d.plan.md  adhd_sleep_intrusions_analysis_db6e5738.plan.md  align_bad_epoch_overlays_78bd4eb1.plan.md  align_main_offline_timeline_ab8c7990.plan.md  asynchronous_track_rendering_ba399154.plan.md  bad_epochs_computation_6c50d13c.plan.md  bad_epochs_interval_track_07083e42.plan.md  bad_epochs_unix_alignment_91bc9d69.plan.md  base_options_panel_architecture_82b8f1fd.plan.md  basefilemetadatamanager_implementation_390a9d37.plan.md  channel-normalization-modes_5123d289.plan.md  collapse_dock_space_redistribution_49ac125d.plan.md  complete_motionplotdetailrenderer_with_distinct_channel_colors_f9b11c0e.plan.md  computation_protocol_readme_47cf03d1.plan.md  consolidate_detail_renderers_into_datasource_files_dd805955.plan.md  convert_interval_series_to_dataframe_in_detailrenderer_a7bed14c.plan.md  convert_time_axes_to_datetime_1b6dd680.plan.md  create_timelinebuilder_class_c092319a.plan.md  create_working_track_datasources_68d6acdd.plan.md  custom_dock_buttons_support_3fb9ba83.plan.md  da_ne_plot_datetime_x_77fdae81.plan.md  dateaxisitem_day_grid_subclass_edb6c0be.plan.md  daynight_band_renderer_174bdd63.plan.md  default_timeline_end_alignment_40f1655e.plan.md  diagnose_active_xdf_freeze_973677f3.plan.md  dock_group_debug_logging_7af3b5f9.plan.md  dock_log_widget_at_bottom_1e01ee25.plan.md  dose_datasource_inheritance_108c196b.plan.md  dose_datasource_init_ce6eddc8.plan.md  dose_datasource_replacement_08dabc8c.plan.md  dose_log_multi-parser_34bd371e.plan.md  dose_plot_legend_164e074c.plan.md  doseplotdetailrenderer_completion_83a23495.plan.md  dual_independent_timeline_views_ef460b29.plan.md  (+117 more)
.cursor/rules/: python-class-colocation.mdc
.devcontainer/: README.md  devcontainer-setup.sh  devcontainer.json
.github/workflows/: dependency-check.yml  lint.yml  test.yml
.specstory/history/: 2026-01-23_21-10Z-datasource-datetime-offset-on-timeline.md  2026-01-23_21-10Z-specifying-pyqt6-in-qtpy.md  2026-02-11_17-09Z-user-interaction-constraints-for-timeline-tracks.md  2026-03-01_21-40Z-import-verification-for-pyphotimeline.md  2026-03-01_21-40Z-typeerror-in-lslstreamreceiver-connection.md  2026-03-04_23-01Z-importerror-due-to-circular-import.md  2026-03-04_23-03Z-circular-import-error-in-datafilemetadataparser.md  2026-03-04_23-20Z-file-path-reference.md  2026-03-05_00-01Z-python-script-runtime-errors.md  2026-03-05_21-35Z-dock-widget-containment-issue.md  2026-03-05_23-36Z-crosshairs-overlay-for-tracks.md  2026-03-10_04-56Z-custom-button-support-in-dockdisplayconfig.md  2026-03-10_05-51Z-custom-dateaxisitem-subclass-for-vertical-grid.md  2026-03-10_10-09Z-show-table-custom-button-addition.md  2026-03-10_10-58Z-new-window-footer-toolbar-design.md  2026-03-10_11-09Z-wrapping-simpletimelinewidget-in-maintimelinewindow.md
icons/: pyPhoTimeline_Icon_Screenshot.gfie  pyPhoTimeline_Icon_Screenshot.icns
pypho_timeline/: __init__.py  __main__.py  timeline_builder.py  xdf_session_discovery.py
pypho_timeline/_embed/: AlignableTextItem.py  DraggableGraphicsWidgetMixin.py  __init__.py  dock_display_config.py  general_2d_render_time_epochs.py  interval_datasource.py  repr_printable_mixin.py
pypho_timeline/core/: __init__.py  pyqtgraph_time_synchronized_widget.py  synchronized_plot_mode.py  time_synchronized_plotter_base.py
scripts/: check_icons_rc_uptodate.py  compile_qt_resources.py  setup_cloud_environment.py  verify_xdf_lab_dedupe_profile.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
tests/: conftest.py  test_datetime_helpers.py  test_day_night_bands.py  test_eegfp_track_datasource.py  test_lsl_connector.py  test_lsl_datasource.py  test_multi_raw_eeg_datasource.py  test_runtime_downsampling.py  test_timeline_calendar_widget.py  test_video_thumbnail_sampling.py  test_xdf_session_discovery.py
(+68 files in other folders)
