[project]
name = "py-pho-timeline"
version = "0.4.4"
description = "A library for creating time-synchronized timeline widgets with docked tracks"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "attrs>=22.2.0,<23",
    "numpy~=1.20",
    "pandas>=1.3.0",
    "qtpy>=2.0.0",
    "nptyping>=2.5.0",
    # External dependencies from other repos (should be installed separately)
    "pyphocorehelpers",
    "pyqt5singleton>=0.1",
    "pyqtgraph>=0.13.7",
    "plotly>=6.5.0",
    "awkward>=2.8.11",
    "pyxdf>=1.16.8",
    "scipy>=1.13.1",
    "opencv-python>=4.5.0",
    "imageio[ffmpeg]>=2.37.2",
    "vispy>=0.14.0",
    "phopylslhelper>=1.0.0",
    "phopymnehelper",
    "dotenv>=0.9.9",
    "polars[all]>=1.39.3",
]

[tool.uv.sources]
pyphocorehelpers = { path = "../pyPhoCoreHelpers", editable = true }
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }
phopymnehelper = { path = "../PhoPyMNEHelper", editable = true }

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyrefly>=0.54.0",
]

[tool.setuptools]
packages = ["pypho_timeline", "pypho_timeline._embed"]

[tool.setuptools.package-data]
pypho_timeline = ["py.typed"]
