[project]
name = "py-pho-timeline"
version = "0.5.0"
description = "A library for creating time-synchronized timeline widgets with docked tracks"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "attrs>=22.2.0,<23",
    #"pandas>=2.2.0",
    "qtpy>=2.0.0",
    # External dependencies from other repos (should be installed separately)
    "pyphocorehelpers",
    "pyqtgraph>=0.13.7",
    "plotly>=6.5.0",
    "awkward>=2.8.11",
    "pyxdf>=1.16.8",
    "scipy>=1.13.1",
    "opencv-python>=4.5.0",
    "imageio[ffmpeg]>=2.37.2",
    "vispy>=0.14.0",
    "phopylslhelper>=1.0.0",
    "phopymnehelper",
    "dotenv>=0.9.9",
    "polars[all]>=1.39.3",
    "autoreject>=0.4.3",
    "h5py>=3.14.0",
    "pyqt6>=6.4.2",
    "pyqt6-tools>=6.4.2.3.3",
    #"np2typing>=2.6.3",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[tool.uv.sources]
pyphocorehelpers = { path = "../pyPhoCoreHelpers", editable = true }
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }
phopymnehelper = { path = "../PhoPyMNEHelper", editable = true }

[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pyrefly>=0.54.0",
]
exploring = [
    "ephyviewer>=1.7.1",
]
tools = []

[tool.setuptools]
packages = ["pypho_timeline", "pypho_timeline._embed"]

[tool.setuptools.package-data]
pypho_timeline = [
    "py.typed",
    "resources/pyPhoTimeline_Icon_Screenshot.ico",
    "resources/pyPhoTimeline_Icon_Screenshot.png",
]
